# nsgablack

./: .gitignore  .pre-commit-config.yaml  .pylance.ini  AGENTS.md  BIAS_SPLIT_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  CURRENT_STATUS_REPORT.md  DECOMPOSITION_RULES.md  LICENSE  MANIFEST.in  OVERVIEW.md  PARALLEL_EVALUATION_TROUBLESHOOTING.md  QUICKSTART.md  README.md  README.md.backup  README_UPDATE_SUMMARY.md  README_nsgablack.md  README_part1.md  README_part2.md  START_HERE.md  TODO.md  WORKFLOW_END_TO_END.md  __init__.py  __main__.py  base.py  bias_system_demo.py  blackbox_Constrained_history.json  blackbox_Rosenbrock_history.json  blackbox_Sphere_history.json  blackbox_ZDT1_history.json  blackbox_昂贵测试问题_history.json  blackbox_约束测试问题_history.json  convergence.py  demo_tsp.py  diversity.py  docs_registry.py  elite.py  example.py  examples.py  (+30 more)
.claude/: settings.local.json
__pycache__/: numba_helpers.fast_is_dominated-25.py311.1.nbc  numba_helpers.fast_is_dominated-25.py313.1.nbc  numba_helpers.fast_is_dominated-25.py313.nbi
adapters/: README.md  __init__.py  algorithm_adapter.py  astar.py  async_event_driven.py  differential_evolution.py  gradient_descent.py  mas.py  moa_star.py  moead.py  multi_strategy.py  nsga2.py  nsga3.py  pattern_search.py  role_adapters.py  simulated_annealing.py  single_trajectory_adaptive.py  spea2.py  trust_region_base.py  trust_region_dfo.py  trust_region_mo_dfo.py  trust_region_subspace.py  vns.py
benchmarks/: compare_summary.py  fixed_baseline_runner.py  parallel_benchmark.py
bias/: FunctionBiasTemplate.md  __init__.py  analytics.py  bias.py  bias_base.py  bias_bayesian.py  bias_library_algorithmic.py  bias_library_domain.py  bias_local_optimization.py  bias_module.py  bias_v2.py  library.py  template_function_bias.py
catalog/: __init__.py  api_doc.py  api_index.py  audit.py  contracts.py  entries.toml  export.py  markers.py  quick_add.py  registry.py  source_sync.py  sync.py  usage.py
core/: __init__.py  acceleration.py  acceleration_helpers.py  algorithm_adapter.py  base.py  base_solver.py  blank_solver.py  composable_solver.py  config.py  control_plane.py  elite.py  evaluation_runtime.py  evolution_solver.py  interfaces.py  nested_solver.py  problems.py  role_adapters.py  runtime.py  runtime_governance.py  solver.py  solver_core.py  solver_manager.py
data/: blackbox_昂贵仿真_history.json  moead_bias_system_test.json  moead_compatibility_test.json
deprecated/: __init__.py
docs/: ADVANCED_EXPERIMENTS.md  ALGORITHM_DECOMPOSITION_HANDS_ON.md  API_GUIDE.md  API_REFERENCE.md  AUTHORITATIVE_EXAMPLES.md  BAYESIAN_OPTIMIZATION_ANALYSIS.md  BIAS_INDEX.md  BIAS_MOTIVATION_QA.md  BIAS_README.md  BIAS_V2_GUIDE.md  CODE_QUALITY_IMPROVEMENT_PLAN.md  COMPONENT_EXAMPLES_INDEX.md  COMPUTE_FLOW_GUIDE_CN.md  COPT_Python_Only_CN.md  CORE_STABILITY.md  DOCSTRING_GUIDE.md  DOCS_REORGANIZATION_REPORT.md  DOCUMENTATION_CLEANUP_PLAN.md  DOCUMENTATION_STRUCTURE.md  EXAMPLES_INDEX.md  FEATURES_OVERVIEW.md  FINAL_DOCUMENTATION_SUMMARY.md  FRAMEWORK_DESIGN_QA.md  FRAMEWORK_OVERVIEW.md  INDEX_MANUAL.md  LOCAL_OPTIMIZATION_ANALYSIS.md  OPTIMIZATION_STRATEGY_GUIDE.md  PARALLEL_EVALUATION_GUIDE.md  PROJECT_CATALOG.md  PROJECT_DETAILED_OVERVIEW.md  PROJECT_STRUCTURE_IMPROVEMENTS.md  QUICKSTART.md  README.md  README_monte_carlo.md  README_nsgablack.md  REORGANIZATION_PLAN.md  REORGANIZATION_REPORT.md  REPRESENTATION_INDEX.md  RESEARCH_QA.md  TAGGED_INDEX.md  (+9 more)
examples/: README.md  abstract_graph_with_mathematical_bias.py  active_learning_surrogate_demo.py  algorithmic_biases_demo.py  algorithmic_biases_full_demo.py  astar_demo.py  async_event_driven_demo.py  bayesian_optimization_example.py  bayesian_quick_test.py  benchmark_harness_demo.py  benchmark_zdt_dtlz_igd_hv.py  bias_demo_minimal.py  bias_example.py  bias_gallery_demo.py  bias_reusability_demo.py  bias_split_example.py  bias_system_real_example.py  bias_v2_example.py  bias_v2_simple_example.py  blank_solver_plugin_demo.py  blank_vs_composable_demo.py  complete_graph_bias_demo.py  composable_solver_fusion_demo.py  context_keys_demo.py  context_schema_demo.py  cross_domain_reusability_demo.py  decision_trace_demo.py  dynamic_cli_signal_demo.py  dynamic_multi_strategy_demo.py  dynamic_penalty_projection_demo.py  dynamic_repair_demo.py  end_to_end_workflow_demo.py  examples.py  expensive_function_parallel_example.py  experiment_tracking_example.py  gpu_ray_mysql_stack_demo.py  graph_bias_example.py  graph_bias_tutorial.ipynb  graph_constraint_examples.py  inner_three_layer_multi_strategy_ui_demo.py  (+64 more)
experiments/: ADVANCED_EXPERIMENTS_README.md  ADVANCED_EXPERIMENTS_SUMMARY.md  BUG_FIX_SUMMARY.md  COMPLETION_SUMMARY.md  EXPERIMENT_README.md  comparison_baseline.py  exp1_problems.py  exp2_mixed_variable.py  quick_comparison.py  visualize_advanced.py  visualize_comparison.py
meta/: __init__.py  metaopt.py
ml/: README.md  __init__.py  checkpoint_manager.py  data_processor.py  evaluation_tools.py  main_surrogate.pkl  ml_models.py  model_manager.py
multi_agent/: README.md  __init__.py
my_project/: .nsgablack-project  BUILD_SOLVER_REGISTRATION.md  COMPONENT_REGISTRATION.md  HANDS_ON_COMPONENTS_ULTRA_ZH.md  HANDS_ON_COMPONENTS_ZH.md  README.md  START_HERE.md  assembly.py  build_solver.py  config.py  project_registry.py  run_solver.py
nsgablack/: __init__.py  __main__.py  examples_registry.py
operators/: __init__.py
plugins/: README.md  __init__.py  base.py
project/: __init__.py  catalog.py  doctor.py  scaffold.py
project_template_base/: run_solver.py
reports/: FINAL_COMPLETION_REPORT.md  PROJECT_CLEANUP_REPORT.md
representation/: __init__.py  base.py  binary.py  constraints.py  context_mutators.py  continuous.py  dynamic.py  graph.py  integer.py  matrix.py  orchestrator.py  permutation.py
scripts/: _tmp_update_summaries.py  organize_project.py  scan_snapshot_violations.py
solvers/: SurrogateUnifiedNSGAII.md  __init__.py  base_solver.py  bayesian_optimizer.py  hybrid_bo.py  moead.py  monte_carlo.py  multi_agent.py  nsga2.py  surrogate.py  surrogate_interface.py  vns.py
surrogate/: __init__.py  (+7 more)
(+5912 files in other folders)
