[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "nsgablack"
dynamic = ["version"]
description = "A comprehensive multi-objective optimization framework with bias system"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "SorrowoMan", email = "sorrowo@foxmail.com"},
]
maintainers = [
    {name = "SorrowoMan", email = "sorrowo@foxmail.com"},
]
keywords = [
    "optimization",
    "multi-objective",
    "nsga-ii",
    "evolutionary-algorithms",
    "bias-system",
    "machine-learning",
    "bayesian-optimization"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
visualization = ["matplotlib>=3.5.0"]
parallel = ["joblib>=1.1.0"]
bayesian = ["skopt>=0.9.0"]
distributed = ["ray>=1.10.0"]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.910",
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "jupyter>=1.0.0",
    "notebook>=6.4.0",
]
all = [
    "matplotlib>=3.5.0",
    "joblib>=1.1.0",
    "skopt>=0.9.0",
    "ray>=1.10.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/nsgablack"
Documentation = "https://nsgablack.readthedocs.io/"
Repository = "https://github.com/yourusername/nsgablack.git"
"Bug Tracker" = "https://github.com/yourusername/nsgablack/issues"

[project.scripts]
nsgablack = "nsgablack.__main__:main"

[tool.setuptools]
packages = ["nsgablack"]

[tool.setuptools.packages.find]
exclude = ["test*", "docs*", "examples*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--verbose --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["nsgablack"]
omit = [
    "*/test/*",
    "*/tests/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]