[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "nsgablack"
dynamic = ["version"]
description = "A decomposed optimization system with pipelines, biases, adapters, plugins"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "SorrowoMan", email = "sorrowo@foxmail.com"},
]
maintainers = [
    {name = "SorrowoMan", email = "sorrowo@foxmail.com"},
]
keywords = [
    "optimization",
    "multi-objective",
    "nsga-ii",
    "evolutionary-algorithms",
    "bias-system",
    "machine-learning",
    "bayesian-optimization"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
visualization = ["matplotlib>=3.5.0"]
parallel = ["joblib>=1.1.0"]
bayesian = ["skopt>=0.9.0"]
distributed = ["ray>=1.10.0"]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.910",
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=1.0.0",
    "sphinx-autodoc-typehints>=1.20.0",
    "jupyter>=1.0.0",
    "notebook>=6.4.0",
]
all = [
    "matplotlib>=3.5.0",
    "joblib>=1.1.0",
    "skopt>=0.9.0",
    "ray>=1.10.0"
]

[project.urls]
Homepage = "https://github.com/sorrowoMan/nsgablack"
Documentation = "https://github.com/sorrowoMan/nsgablack/tree/main/docs"
Repository = "https://github.com/sorrowoMan/nsgablack.git"
"Bug Tracker" = "https://github.com/sorrowoMan/nsgablack/issues"

[project.scripts]
nsgablack = "nsgablack.__main__:main"

[tool.setuptools]

[tool.setuptools.packages.find]
exclude = ["test*", "docs*", "examples*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
# 渐进式类型检查：先不强制要求所有函数都有类型提示
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

# 排除不需要类型检查的目录
exclude = [
    "build/",
    "dist/",
    "examples/",
    "experiments/",
    "tests/",
    "__pycache__",
    ".git",
    "docs",
]

[[tool.mypy.overrides]]
# 新代码严格要求类型
module = "bias.*,core.*,solvers.*,surrogate.*,multi_agent.*,utils.*"
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "bias: marks tests related to bias system",
    "surrogate: marks tests related to surrogate models",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/dist/*",
    "*/build/*",
    "*/examples/*",
    "*/experiments/*",
    "setup.py",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "@pytest.mark",
]
